WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38202
[V8] Fix XHR memory leak in GC controller.
https://bugs.webkit.org/show_bug.cgi?id=38202
Summary
[V8] Fix XHR memory leak in GC controller.
Vitaly Repeshko
Reported
2010-04-27 10:15:14 PDT
[V8] Fix XHR memory leak in GC controller.
Attachments
patch v1
(1.94 KB, patch)
2010-04-27 10:21 PDT
,
Vitaly Repeshko
japhet
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vitaly Repeshko
Comment 1
2010-04-27 10:21:32 PDT
Created
attachment 54427
[details]
patch v1
Nate Chapin
Comment 2
2010-04-27 10:29:36 PDT
Comment on
attachment 54427
[details]
patch v1 Thanks again for taking this on!
Vitaly Repeshko
Comment 3
2010-04-27 11:38:42 PDT
Committed
r58316
M WebCore/ChangeLog M WebCore/bindings/v8/V8GCController.cpp
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug